# RAG---Bootcamp

./: .gitignore  main.py  pyproject.toml  requirements.txt
0-data-ingestion/: 1.data-ingrestion.ipynb  2.dataparsing-pdf.ipynb  3.data-parsing-pdf.ipynb  4.csv-excel-parsing.ipynb  5.json-parsing.ipynb  6.sql-list.parsing.ipynb
0-data-ingestion/data/pdf_files/: dummy-csv.csv  dummy-json.json  dummy-word-pdf.docx
0-data-ingestion/data/text_files/: javascript-into.txt  python-intro.txt
1-vector-embeddings-and-databases/: embedding.ipynb  hugging-face-embedding.ipynb
2-vector-stores/: chromaDb.ipynb
2-vector-stores/files/: ai.txt  climatchange.txt
extra-learnings/: bpe-implementation.js
